objects/Case_Time_Log__c.object
<CustomObject>
    <description>Time Log records for the Case object. A snapshot of Case fields and time calculations when closed.</description>
    <fields>
        <fullName>Agent_Location__c</fullName>
        <description>The location of the agent working on the case</description>
        <inlineHelpText>The location of the agent working on the case</inlineHelpText>
        <label>Agent Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jackson</fullName>
                </value>
                <value>
                    <fullName>Cebu</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Moncton</fullName>
                </value>
                <value>
                    <fullName>Manilla</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent_Team_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The agent on the time logs team lead</description>
        <inlineHelpText>The agents team lead</inlineHelpText>
        <label>Agent Team Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Time_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_Tenure__c</fullName>
        <description>The age in months the agent had worked for HBC</description>
        <formula>ROUND(
				(  DATEVALUE(CreatedDate) - Case__r.Owner:User.Agent_Hire_Date__c) / 365 * 12,
				1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The age in months the agent had worked for HBC</inlineHelpText>
        <label>Agent Tenure</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Duration_Days__c</fullName>
        <description>Converts Business_Hours_Duration__c (secs) to days</description>
        <formula>Business_Hours_Duration__c / 86400</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days this Time Log record had during business hours.</inlineHelpText>
        <label>Business Hours Duration - Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Duration_Hrs__c</fullName>
        <description>Converts  Business_Hours_Duration__c (secs) to hours</description>
        <formula>Business_Hours_Duration__c / 3600</formula>
        <inlineHelpText>Number of hours this Time Log record had during business hours.</inlineHelpText>
        <label>Business Hours Duration - Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Duration_Mins__c</fullName>
        <description>Converts Business_Hours_Duration__c (secs) to minutes</description>
        <formula>Business_Hours_Duration__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of minutes this Time Log record had during business hours.</inlineHelpText>
        <label>Business Hours Duration - Mins</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Duration__c</fullName>
        <description>Calculate business time duration when a Time Log record &quot;closes&quot; in seconds.</description>
        <inlineHelpText>Number of seconds this Time Log record had during business hours.</inlineHelpText>
        <label>Business Hours Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_Duration_Days__c</fullName>
        <description>Converts Calendar_Duration__c (secs) to days</description>
        <formula>Calendar_Duration__c / 86400</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days this Time Log record had in calendar time. Calendar time includes both business hours time and non business hours time.</inlineHelpText>
        <label>Calendar Duration - Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_Duration_Hrs__c</fullName>
        <description>Converts Calendar_Duration__c (secs) to hours</description>
        <formula>Calendar_Duration__c / 3600</formula>
        <inlineHelpText>Number of hours this Time Log record had in calendar time. Calendar time includes both business hours time and non business hours time</inlineHelpText>
        <label>Calendar Duration - Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_Duration_Mins__c</fullName>
        <description>Converts Calendar_Duration__c (secs) to minutes</description>
        <formula>Calendar_Duration__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of minutes this Time Log record had in calendar time. Calendar time includes both business hours time and non business hours time.</inlineHelpText>
        <label>Calendar Duration - Mins</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_Duration__c</fullName>
        <description>Calculate calendar time duration when a Time Log record &quot;closes&quot;</description>
        <inlineHelpText>Number of seconds this Time Log record had in calendar time. Calendar time includes both business hours time and non business hours time.</inlineHelpText>
        <label>Calendar Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Status_Change__c</fullName>
        <description>If  Case Status equals Case Status New set to 0, else set to 1.</description>
        <formula>IF( Case_Status__c = Case_Status_New__c, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>1 in this field indicates that the Case Status has changed.</inlineHelpText>
        <label>Case Status Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Status_Group__c</fullName>
        <description>This field allows categorization of the Case Status values into Customer or Company for reporting purposes.  Edit the formula below as required to account for the values in the Case Status field.</description>
        <formula>/* EDIT THIS FORMULA AS REQUIRED TO MATCH THE CASE STATUS FIELD VALUES */
/* THIS IS AN EXAMPLE ONLY */
/*                         */
Case ( Case_Status__c , 
&quot;Team Assistance Needed&quot;,&quot;Company&quot;, 
&quot;Awaiting Service Excellence Review&quot;,&quot;Company&quot;, 
&quot;POS Team&quot;,&quot;Company&quot;, 
&quot;Pending Fraud Team&quot;,&quot;Company&quot;, 
&quot;System Issue&quot;,&quot;Company&quot;, 
&quot;Awaiting Customer Response&quot;,&quot;Customer&quot;, 
&quot;Awaiting Internal Response&quot;,&quot;Company&quot;, 
&quot;Response Received&quot;,&quot;Company&quot;, 
&quot;New&quot;,&quot;Company&quot;, 
&quot;In Progress&quot;,&quot;Company&quot;, 
&quot;Closed&quot;,&quot;Customer&quot;, 
&quot;Company&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field allows categorization of the Case Status values into Customer or Company for reporting purposes.</inlineHelpText>
        <label>Case Status Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status_New__c</fullName>
        <description>The value of the Case Status field when the Time Log record was closed / ended.</description>
        <inlineHelpText>The value of the Case Status field when the Time Log record was closed / ended.</inlineHelpText>
        <label>Case Status New</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <description>The value of the Case Status field when the Time Log record was created.</description>
        <inlineHelpText>The value of the Case Status field when the Time Log record was created.</inlineHelpText>
        <label>Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent object lookup</description>
        <inlineHelpText>This is the link up to the Case record (parent record) for this Time Log record.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Time Logs</relationshipLabel>
        <relationshipName>Case_Time_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>The date time that this time log record was closed or ended.</description>
        <inlineHelpText>The date time that this time log record was closed or ended.</inlineHelpText>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Aggregated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if this record is already considered in aggregation logic</description>
        <inlineHelpText>This field indicates if this record is already considered in aggregation logic</inlineHelpText>
        <label>Aggregated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Type__c</fullName>
        <description>This field indicates whether the Parent record Owner was a User or a Queue.</description>
        <inlineHelpText>This field indicates whether the Parent record Owner was a User or a Queue.</inlineHelpText>
        <label>Owner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Owner_Change__c</fullName>
        <description>Set value to 1 if Parent Owner is not the same as Parent Owner New</description>
        <formula>IF ( Parent_Owner__c =  Parent_Owner_New__c, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set value to 1 if Parent Owner is not the same as Parent Owner New.   This allows the counting of how many times Case Ownship changed.</inlineHelpText>
        <label>Parent Owner Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Owner_New_Role__c</fullName>
        <description>Role of the User in the Parent_Owner_User_New_c field. Used to support report filtering/grouping of Time Log records by User group attributes, e.g. role.</description>
        <formula>Parent_Owner_User_New__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Role of the new Owner of the Parent Object. (User that was the Owner of the Case record at the time the Time Log record was CLOSED).</inlineHelpText>
        <label>Case Owner New - Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Owner_New__c</fullName>
        <description>This field contains the value of the Parent record Owner that caused this Time Log record to be &quot;closed&quot;. This is the text value of the Case Owner field (Parent record Owner). This field can be used for reporting as it includes both the User and Queue names in the same field. Changes to other fields being tracked will cause this field to be updated, but not changed when the Time Log record is created for other changes.</description>
        <inlineHelpText>This is the Owner of the Parent record at the time the time log record was closed.  This value is updated when the Parent record&apos;s Owner changes, otherwise it doesn&apos;t change, since the Owner hasn&apos;t actually changed on the Parent record.</inlineHelpText>
        <label>Parent Owner New</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Owner_Role__c</fullName>
        <description>Role of the user in the Parent_Owner_User__c field. Used to support report filtering/grouping of Time Log records by user group attributes, e.g. role.   This is configured in the custom metadata settings.</description>
        <formula>Parent_Owner_User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Role of the User in the Case Owner field when the time log record is created.</inlineHelpText>
        <label>Case Owner - Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Owner_User_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User object lookup, indicating the User that was the Owner of the Case record at the time the Time Log record was CLOSED; the new &quot;Owner&quot; when the owner of the parent record changes.</description>
        <inlineHelpText>User object lookup, indicating the User that was the Owner of the Case record at the time the Time Log record was CLOSED; the new &quot;Owner&quot; when the owner of the parent record changes.</inlineHelpText>
        <label>Case Owner New - User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Time_Logs_Owner_User_New</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Owner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User object lookup from the Case Owner field at time of Time Log creation</description>
        <inlineHelpText>User object lookup, indicating the User that was the Owner of the Case record at the time the Time Log record was created.</inlineHelpText>
        <label>Case Owner - User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Time_Logs_Owner_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Owner__c</fullName>
        <description>This is the text value of the Case Owner field (Parent record Owner). This field can be used for reporting as it includes both the User and Queue names in the same field.</description>
        <inlineHelpText>This is the text value of the Case Owner field (Parent record Owner). This field can be used for reporting as it includes both the User and Queue names in the same field.</inlineHelpText>
        <label>Parent Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>The date time that this Time Log record was started / created.</description>
        <inlineHelpText>The date time that this Time Log record was started / created.</inlineHelpText>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Since_Start__c</fullName>
        <formula>End_Time__c -  Case__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Since__c</fullName>
        <formula>Now()- CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Log Created</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Case Time Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Case__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Case_Status_New__c</columns>
        <columns>Owner_Type__c</columns>
        <columns>Parent_Owner__c</columns>
        <columns>Parent_Owner_New__c</columns>
        <columns>Parent_Owner_User__c</columns>
        <columns>Parent_Owner_Role__c</columns>
        <columns>Parent_Owner_User_New__c</columns>
        <columns>Parent_Owner_New_Role__c</columns>
        <columns>Is_Aggregated__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CTL-{00000}</displayFormat>
        <label>Time Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Time Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>